--- a/Bảng/bangnangcao-covuanew.css
+++ b/Bảng/bangnangcao-covuanew.css
@@ -1,9 +1,11 @@
-tr:nth-child(odd) td:nth-child(odd) {
-    background: black;
-}
-tr:nth-child(even) td:nth-child(even) {
+tr:nth-child(even) td:nth-child(odd) {
     background: black
 }
+
+tr:nth-child(odd) td:nth-child(even) {
+    background: black;
+}
+
 
 table {
     border: 1px solid;
